<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/margin_default">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/img_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:background="@{viewmodel.languageFlagObservable}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/english" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_default"
            android:paddingBottom="@dimen/margin_default"
            android:src="@drawable/where_is_kiwi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_where_is_kiwi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:text="@{viewmodel.titleObservable}"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/where_is_kiwi" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_find_kiwi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:backgroundTint="@color/light_green"
            android:paddingStart="@dimen/margin_mid"
            android:paddingEnd="@dimen/margin_mid"
            android:text="@{viewmodel.buttonObservable}"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColorLink="@color/white"
            app:cornerRadius="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/yes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewmodel"
            type="com.faranjit.geojson.features.home.presentation.HomeViewModel" />
    </data>
</layout>